Kubernetes-Projekt/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    component: frontend
    app: myapp

spec:
  template:
    metadata:
      name: frontend-pod
      labels:
        component: frontend
        app: myapp
    spec:
      containers:
        - name: frontend-container
          image: januszsch/frontend-kubernetes-przepisy:latest

  replicas: 1
  selector:
    matchLabels:
      app: myapp
      component: frontend
