Kubernetes-Projekt/backend-clusterip2.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip2

spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001

  selector:
    component: backend
    app: myapp
