Kubernetes-Projekt/nginx-clusterip2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip2
 
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  
  selector:
    component: frontend
    app: myapp
