Kubernetes-Projekt/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-clusterip
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-clusterip
                port:
                  number: 80

          - path: /api2/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-clusterip2
                port:
                  number: 5001
          - path: /app/?(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-clusterip
                port:
                  number: 80
